--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -145,8 +145,8 @@
   <data name="Logo - EverSD" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo - EverSD.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="romfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\romfile.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="crc2rom_mappings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\crc2rom_mappings.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="special_bash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\special_bash.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
