--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="mamenames" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mamenames.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Build_EverSD_Folders" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Build EverSD Folders.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
